...
                borderRadius: radius.card,
                minHeight: SERVER_ENTRY_MIN_HEIGHT,
                paddingHorizontal: 16,
              })}
            >
              <IconAdd
                testID="addServerIcon"
                width={28}
                height={28}
                fill={colors.text}
                style={{ marginRight: 8 }}
              />
              <AppText variant="s1">
...
