...
            }}
          />
          <View style={{ paddingHorizontal: 16 }}>
            {serverForm}

            <Button
              testID="setingsScreenRemoveServer"
              style={{ marginVertical: 16 }}
              appearance="ghost"
              status="danger"
              onPress={async () => {
                if (serverIndex !== undefined) {
                  if (servers.length > 1) {
...
