...
      "foundOne": "Server found",
      "foundMany": "{{count}} servers found",
      "selectHelper": "Select the one you want to connect to.",
      "cancel": "Cancel"
    },
    "useDemo": "Use demo instance",
    "remove": "Remove",
    "removeConfirm": "Do you really want to remove {{title}}?",
    "editServer": "Edit Server"
  },
  "widget": {
    "type": {
      "price": "Grid import price",
...
