...
  const memoizedHeader = React.useMemo(
    () => (
      <Header
        title={t("servers.manually.qrcode.scan")}
        showDone
        onDone={() => navigation.goBack()}
        doneTestID="headerCloseIconCamera"
      />
    ),
    [navigation, t],
  );

  return (
...
          paddingHorizontal: 16,
          paddingBottom: 32,
        }}
      >
        {testingEnvironment() ? (
          <Button
            testID="testQrCodeDetected"
            onPress={() =>
              serverDetected({
                url: "http://localhost:7080",
                title: "Local Auth",
                username: "admin",
                password: "secret",
...
