import "detox";
import { byWebDataTestId, waitForWebview, launchWithDeepLink } from "./helper";
import { expect } from "detox";

async function expectServerForm() {
  await expect(element(by.id("serverFormTitle"))).toHaveText(
    "Local Auth",
  );
  await expect(element(by.id("serverFormUrl"))).toHaveText(
    "http://localhost:7080",
  );
  await expect(element(by.id("serverFormAuthUser"))).toHaveText("admin");
  await expect(element(by.id("serverFormAuthPassword"))).toHaveText(
    "secret",
  );
}

describe("QRCode (switch server)", () => {
  it("open and close", async () => {
    await launchWithDeepLink(
      "evcc://server?url=localhost:7070&title=siteTitle",
    );

    await element(by.id("serverFormCheckAndSave")).tap();
    await waitForWebview();

    await byWebDataTestId("tab-more").tap();
    await byWebDataTestId("tab-more-app").tap();

    await element(by.id("addServerIcon")).tap();
    await element(by.id("scanQrcodeButtonAddserverform")).tap();
    await element(by.id("headerCloseIconCamera")).tap();
    await element(by.id("headerBackIcon")).tap();

    await waitFor(element(by.id("server0")))
      .toExist()
      .withTimeout(20000);
    await expect(element(by.id("server1"))).not.toExist();
  });

  it("add server by serverform button", async () => {
    await launchWithDeepLink(
      "evcc://server?url=localhost:7070&title=siteTitle",
    );

    await element(by.id("serverFormCheckAndSave")).tap();
    await waitForWebview();

    await byWebDataTestId("tab-more").tap();
    await byWebDataTestId("tab-more-app").tap();

    await element(by.id("addServerIcon")).tap();
    await element(by.id("scanQrcodeButtonAddserverform")).tap();
    await element(by.id("testQrCodeDetected")).tap();

    await expectServerForm();

    await element(by.id("serverFormCheckAndSave")).tap();
    await waitFor(element(by.id("server1")))
      .toExist()
      .withTimeout(20000);
  });
});
